# AI-Specialized-Departments

./: .gitignore  LICENSE  README.md  mobile-development-final-closure-report.md
chatgpt/cybersecurity/: NATIVE_SOURCES.md  README.md
chatgpt/mobile-development/: README.md
chatgpt/software-development/: README.md
chatgpt/web-development/: README.md  custom-gpt-setup.md  workspace-agent-setup.md
claude-code/cybersecurity/: NATIVE_SOURCES.md  README.md
claude-code/devops-cloud/: CLAUDE.md  README.md
claude-code/mobile-development/: .mcp.json  CLAUDE.md
claude-code/software-development/: CLAUDE.md  README.md
claude-code/web-development/: README.md
claude/cybersecurity/: NATIVE_SOURCES.md  README.md
claude/devops-cloud/: README.md
claude/software-development/: README.md
claude/web-development/: README.md  claude-project-setup.md
cline/cybersecurity/: NATIVE_SOURCES.md  README.md
cline/devops-cloud/: README.md
cline/mobile-development/: .clineignore  README.md
cline/software-development/: README.md
cline/web-development/: README.md
codex/devops-cloud/: AGENTS.md  README.md
codex/mobile-development/: README.md
codex/software-development/: README.md
codex/web-development/: README.md
cursor/devops-cloud/: README.md
cursor/mobile-development/: AGENTS.md
cursor/software-development/: AGENTS.md  README.md
cursor/web-development/: AGENTS.md  README.md
gemini-cli/cybersecurity/: NATIVE_SOURCES.md  README.md
gemini-cli/devops-cloud/: GEMINI.md  README.md
gemini-cli/mobile-development/: GEMINI.md
gemini-cli/software-development/: README.md
gemini-cli/web-development/: GEMINI.md  README.md
github-copilot/cybersecurity/: NATIVE_SOURCES.md  README.md
github-copilot/devops-cloud/: README.md
github-copilot/software-development/: README.md
github-copilot/web-development/: README.md
junie/cybersecurity/: NATIVE_SOURCES.md  README.md
junie/devops-cloud/: README.md
junie/software-development/: README.md
junie/web-development/: README.md
kilo-code/cybersecurity/: NATIVE_SOURCES.md  README.md
kilo-code/devops-cloud/: README.md
kilo-code/mobile-development/: .kilocodeignore  AGENTS.md  kilo.jsonc
kilo-code/software-development/: AGENTS.md  README.md  kilo.jsonc
openai-agents-sdk/cybersecurity/application-product-devsecops-security/: pyproject.toml
openai-agents-sdk/cybersecurity/application-product-devsecops-security/docs/: ROLES.md
openai-agents-sdk/cybersecurity/application-product-devsecops-security/src/cybersecurity_application_product_devsecops_security_agents/: registry.py
openai-agents-sdk/cybersecurity/cyber-resilience-specialized-technologies/: pyproject.toml
openai-agents-sdk/cybersecurity/cyber-resilience-specialized-technologies/src/cybersecurity_cyber_resilience_specialized_technologies_agents/: __init__.py  registry.py
openai-agents-sdk/cybersecurity/defensive-security-operations-detection-intelligence/: pyproject.toml
openai-agents-sdk/cybersecurity/defensive-security-operations-detection-intelligence/docs/: SKILLS.md
openai-agents-sdk/cybersecurity/defensive-security-operations-detection-intelligence/reference/: NATIVE_SOURCES.md
openai-agents-sdk/cybersecurity/defensive-security-operations-detection-intelligence/src/cybersecurity_defensive_security_operations_detection_intelligence_agents/: registry.py
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/: pyproject.toml
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/src/cybersecurity_governance_risk_compliance_assurance_agents/: registry.py
openai-agents-sdk/cybersecurity/incident-response-dfir-recovery/: README.md  pyproject.toml
openai-agents-sdk/cybersecurity/incident-response-dfir-recovery/docs/: ROLES.md
openai-agents-sdk/cybersecurity/incident-response-dfir-recovery/src/cybersecurity_incident_response_dfir_recovery_agents/: __init__.py  agents.py  config.py  guardrails.py  outputs.py  registry.py
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/: pyproject.toml
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/docs/: ROLES.md  SKILLS.md
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/src/cybersecurity_offensive_security_authorized_validation_agents/: registry.py
openai-agents-sdk/cybersecurity/security-architecture-engineering/: pyproject.toml
openai-agents-sdk/cybersecurity/security-architecture-engineering/docs/: ROLES.md
openai-agents-sdk/cybersecurity/security-architecture-engineering/src/cybersecurity_security_architecture_engineering_agents/: registry.py
prompts_web/: 01_CHATGPT_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  02_CLAUDE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  03_CLAUDE_CODE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  04_CLINE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  05_CODEX_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  06_CURSOR_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  07_GEMINI_CLI_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  08_GITHUB_COPILOT_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  09_JUNIE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  10_KILO_CODE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  11_KIRO_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  12_LOCAL_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  13_MISTRAL_VIBE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  14_OPENAI_AGENTS_SDK_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  15_OPENCODE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  16_QWEN_CODE_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  17_WARP_WEB_DEVELOPMENT_CORRECTION_PROMPT.md  18_WINDSURF_WEB_DEVELOPMENT_CORRECTION_PROMPT.md
(+1625 files in other folders)
