[project]
name = "cybersecurity-application-product-devsecops-security-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Application, Product, and DevSecOps Security."
requires-python = ">=3.11"
dependencies = ["openai-agents>=0.7,<1", "pydantic>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]
