[project]
name = "cybersecurity-cyber-resilience-specialized-technologies-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Cyber Resilience and Specialized Technologies."
requires-python = ">=3.11"
dependencies = ["openai-agents>=0.7,<1", "pydantic>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]
