[project]
name = "cybersecurity-incident-response-dfir-recovery-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Incident Response, DFIR, and Recovery."
requires-python = ">=3.11"
dependencies = ["openai-agents>=0.7,<1", "pydantic>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]
