[project]
name = "cybersecurity-offensive-security-authorized-validation-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Offensive Security Authorized Validation."
requires-python = ">=3.11"
dependencies = ["openai-agents", "pydantic"]

[tool.setuptools.packages.find]
where = ["src"]
