[project]
name = "cybersecurity-security-architecture-engineering-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Security Architecture and Engineering."
requires-python = ">=3.11"
dependencies = ["openai-agents", "pydantic"]

[tool.setuptools.packages.find]
where = ["src"]
